# fimpl

./: .clang-format  CMakeLists.txt
include/fimpl/: compile_time_str.hpp  factory.hpp  registry.hpp  type_list.hpp
tests/: CMakeLists.txt
tests/factory/: CMakeLists.txt
tests/factory/src/: main.cpp
tests/factory/src/contexts/: float_context.cpp  int_context.cpp
tests/registry/: CMakeLists.txt
tests/registry/src/: interface.hpp  main.cpp
tests/registry/src/contexts/: float_context.cpp  int_context.cpp
